<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Sterowanie" Id="{9ed956b7-beab-433c-bbb9-26959367f620}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbStart									: FB_Przycisk_NO;	//przycisk start
	fbStop									: FB_Przycisk_NO;	//przycisk stop
	fbWieza									: FB_WiezaSygnalizacyjna_Cyfrowe;	
	bUkladSafetyOK							: BOOL;
	bWcisnietyGrzyb							: ARRAY [1..10] OF BOOL;
//glowna metoda sterujaca
	fbSterowanieMaszyna						: FB_Sterowanie (	
															fbStart						:= fbStart,
													        fbStop						:= fbStop,
	                                                        fbWieza						:= fbWieza,
	                                                        bUkladSafetyOK				:= bUkladSafetyOK,
	                                                        bWcisnietyGrzyb				:= bWcisnietyGrzyb,
															iIloscGrzybowNaMaszynie		:= 1);
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>