<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_Sterowanie" Id="{13408bd3-8145-4c5f-8343-0c104b15fb7b}" SpecialFunc="None">
    <Declaration><![CDATA[//==================================================================================================
//								RJM Maszyny sp. z o.o.
//									22.06.2022
//	Sterowanie praca maszyny   
// 	v1.0	|| TC v 3.1.4024.29		|| - pierwsza wersja
//==================================================================================================
FUNCTION_BLOCK FB_Sterowanie
VAR
	fbStart									: ITF_Przycisk;	//przycisk start
	fbStop									: ITF_Przycisk;	//przycisk stop
	fbWieza									: ITF_WiezaSygnalizacyjna;	
	bUkladSafetyOK							: BOOL;
	bWcisnietyGrzyb							: REFERENCE TO ARRAY [1..10] OF BOOL;
	iIloscGrzybowNaMaszynie					: INT := 1;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* ZAŁOŻENIA
	- przelaczanie trybow
	- przelaczanie stanow 
	- przelaczanie trybow tylko w okreslonych stanach
	- reagowanie na generowanie bledow podzespolow 
	
	
*)


]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{d4fc2347-0397-4b16-875e-43b83cb7732a}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	fbStart									: ITF_Przycisk;	//przycisk start
	fbStop									: ITF_Przycisk;	//przycisk stop
	fbWieza									: ITF_WiezaSygnalizacyjna;	
	bUkladSafetyOK							: BOOL;
	bWcisnietyGrzyb							: REFERENCE TO ARRAY [1..10] OF BOOL;
	iIloscGrzybowNaMaszynie					: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.fbStart									:= fbStart;
THIS^.fbStop									:= fbStop;
THIS^.fbWieza									:= fbWieza;
THIS^.bUkladSafetyOK							:= bUkladSafetyOK;
THIS^.bWcisnietyGrzyb							:= bWcisnietyGrzyb;
THIS^.iIloscGrzybowNaMaszynie					:= iIloscGrzybowNaMaszynie;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Sterowanie">
      <LineId Id="9" Count="0" />
      <LineId Id="18" Count="5" />
      <LineId Id="17" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="36" Count="0" />
    </LineIds>
    <LineIds Name="FB_Sterowanie.FB_init">
      <LineId Id="13" Count="3" />
      <LineId Id="7" Count="0" />
      <LineId Id="18" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>